examples/cert-management/domain-test2/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    # certmanager.k8s.io/acme-challenge-type: dns01
    # certmanager.k8s.io/acme-dns01-provider: route53
    # # ingress.kubernetes.io/rewrite-target: /
    # certmanager.k8s.io/cluster-issuer: letsencrypt-staging
spec:
  tls:
  - hosts:
    - www.moodle1.net
    secretName: cert-example-crt
  rules:
    - host: www.moodle1.net
      http:
        paths:
        - path: /
          backend:
            serviceName: cert-example
            servicePort: 30001
